<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    android:gravity="center_vertical"
    android:paddingHorizontal="@dimen/default_screen_horizontal_padding"
    android:paddingVertical="@dimen/default_screen_vertical_padding"
    tools:context=".ui.activity.IniActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo_container"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/default_corner_radius">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_couple_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_logo_container"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_yourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edt_yourName"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_yourFrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_friend_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edt_yourFrName"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edt_date"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/init_screen_date_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_couple_info_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/txt_btn_confirm_user_info" />
</RelativeLayout>