<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingsFragment">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_layout_params_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:id="@+id/ll_themes_setting_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:text="@string/txt_title_theme"/>

                    <LinearLayout
                        android:id="@+id/ll_preview_container"
                        android:layout_width="225dp"
                        android:layout_height="400dp"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/couple"
                        android:layout_gravity="center">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:background="?attr/colorPrimary"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="50dp"
                                android:maxWidth="135dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/profile_image"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:src="@drawable/couple"
                                    app:civ_border_color="?attr/colorPrimary"
                                    app:civ_border_width="1dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="35dp"
                                android:layout_marginRight="20dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_heart"
                                    android:layout_width="56dp"
                                    android:layout_height="56dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="15dp"
                                    android:src="@drawable/heart_shape" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="50dp"
                                android:maxWidth="135dp"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/friend_profile_image"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:src="@drawable/couple"
                                    app:civ_border_color="?attr/colorPrimary"
                                    app:civ_border_width="2dp" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_themes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_background_setting_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/tv_title_background_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:text="@string/txt_title_background_picture"/>

                    <ImageView
                        android:id="@+id/iv_background_picture"
                        android:layout_width="225dp"
                        android:layout_height="400dp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_information_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:id="@+id/ll_your_name_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tv_title_your_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:text="@string/txt_title_your_name"/>

                        <LinearLayout
                            android:id="@+id/ll_your_name_editor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tv_your_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:layout_weight="1"/>

                            <TextView
                                android:id="@+id/tv_action_edit_your_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                android:textColor="?attr/colorPrimary"
                                android:text="@string/txt_action_edit_name"
                                android:layout_marginStart="8dp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_your_friend_name_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tv_title_your_friend_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:text="@string/txt_title_your_friend_name"/>

                        <LinearLayout
                            android:id="@+id/ll_your_friend_name_editor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tv_your_friend_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:layout_weight="1"/>

                            <TextView
                                android:id="@+id/tv_action_edit_your_friend_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                android:textColor="?attr/colorPrimary"
                                android:text="@string/txt_action_edit_name"
                                android:layout_marginStart="8dp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_your_avatar_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_your_avatar_image"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:text="@string/txt_your_avatar_image"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_your_avatar"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_your_friend_avatar_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_your_friend_avatar_image"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:text="@string/txt_your_friend_avatar_image"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_your_friend_avatar"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>